Fix still more compilation